5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1850_1277.log
== TEST (2019-06-21 00:15:09) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
y=(y/111)-1
z=(z/111)-1
print(x[y,z])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:15:57) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
y=(y/111)-1
z=(z/111)-1
q= x[y,z]
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:16:22) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
y=(y/111)-1
z=(z/111)-1
print(y)
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:16:46) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
y=(y/111)-1
z=(z/111)-1
print(int(y))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:17:33) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
y=(y/111)-1
z=(z/111)-1
y=int(y)
z=int(z)
print(x[y,z
-- ERROR:
File "XXXX", line 10
    
               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:17:39) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
y=(y/111)-1
z=(z/111)-1
y=int(y)
z=int(z)
print(x[y,z])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-21 00:17:46) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
y=(y/111)-1
z=(z/111)-1
y=int(y)
z=int(z)
print(x[y,z])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-21 00:17:56) 
-- CODE:
from numpy import*
x=array([[0,2,11,6,15,11,1],[2,0,7,12,14,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
y=int(input("Digite a primeira cidade: "))
z=int(input("Digite a segunda cidade: "))
y=(y/111)-1
z=(z/111)-1
y=int(y)
z=int(z)
print(x[y,z])
-- EXECUTION TIME:
1.14605
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
